# ltest

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  run_tcc.sh
src/: armor.c  armor.h  basemode.c  basemode.h  basemode_ui.c  basemode_ui.h  cpairs.c  cpairs.h  entity.c  entity.h  entity_name.c  entity_name.h  entity_types.c  entity_types.h  fight.c  fight.h  globals.c  globals.h  item.c  item.h  item_ui.c  item_ui.h  location.c  location.h  log.c  log.h  main.c  map_actions.c  map_actions.h  map_ai.c  map_ai.h  map_ai_hm.c  map_ai_hm.h  map_fov.c  map_fov.h  map_path.c  map_path.h  map_ui.c  map_ui.h  mapdefs.h  (+20 more)
